--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
     "next": "12.1.4",
+    "postcss-import": "^14.1.0",
+    "postcss-mixins": "^9.0.3",
+    "postcss-nested": "^5.0.6",
+    "postcss-simple-vars": "^6.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
@@ -30,6 +35,11 @@
     "@babel/core": "^7.17.8",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/base": "^5.0.0-alpha.79",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "@storybook/addon-actions": "^6.4.20",
     "@storybook/addon-essentials": "^6.4.20",
     "@storybook/addon-interactions": "^6.4.20",
@@ -52,6 +62,7 @@
     "next-auth": "^4.3.1",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "react-router-dom": "^6.3.0",
     "storybook-addon-next-router": "^3.1.1",
     "storybook-css-modules-preset": "^1.1.1",
     "tailwindcss": "^3.0.23",
