--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "postcss-mixins": "^9.0.3",
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^17.0.2",
+    "react-dom": "18.0.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -66,7 +67,9 @@
     "storybook-addon-next-router": "^3.1.1",
     "storybook-css-modules-preset": "^1.1.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "sass": "^1.52.1",
+    "sass-mixins": "^0.13.0"
   },
   "resolutions": {
     "webpack": "^5"
