--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "postcss-mixins": "^9.0.3",
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -64,12 +65,12 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "react-router-dom": "^6.3.0",
+    "sass": "^1.52.1",
+    "sass-mixins": "^0.13.0",
     "storybook-addon-next-router": "^3.1.1",
     "storybook-css-modules-preset": "^1.1.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3",
-    "sass": "^1.52.1",
-    "sass-mixins": "^0.13.0"
+    "typescript": "4.6.3"
   },
   "resolutions": {
     "webpack": "^5"
