--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
+    "axios": "^0.27.2",
     "next": "12.1.4",
     "postcss-import": "^14.1.0",
     "postcss-mixins": "^9.0.3",
