--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-simple-vars": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "18.0.0",
+    "react-hook-inview": "^4.5.0",
     "react-icons": "^4.2.0",
     "react-typed": "^1.2.0"
   },
